# office

./: Cargo.toml  README.md
.fleet/: run.json
src/: camera.rs  collisions.rs  main.rs  utils.rs  world.rs
src/employee/: components.rs  mod.rs  plugin.rs  resources.rs  startup.rs  systems.rs
src/employee/components/: employee.rs  mod.rs  taskable.rs
src/office_block/: mod.rs  plugin.rs  resources.rs  startup.rs  systems.rs
src/office_block/components/: desk.rs  mod.rs  office_block.rs
