[package]
name = "office"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_rapier2d = { version = "0.17.0", features = ["simd-stable", "debug-render"] }
multi-map = "1.3.0"
pid_control = "0.7.2"
rand = "0.8.5"

